SVN from 0.72:
        - Rebuild: Merged DMD 2.003.
        - Improved incremental build speed.

0.72 from 0.71:
        - More DMD fixes - now always compiles one file at a time.
        - Fixed -version=OSXUniversalBinary (see ticket #121).

0.71 from 0.70:
        - Much-improved README.software_engineers.
        - Fixed 'set' and 'add' commands (see ticket #102).
        - Added 'error' and 'warn' hook commands (see ticket #103).
        - Added 'binstall' subcommand (see ticket #105).
        - Added 'noinstall' setting (see ticket #106).
        - `dsss install` now installs .di files in libraries (see ticket #92).
        - Added 'installdir' hook command (see ticket #84).
        - Rebuild: Should now handle non-DMD compilers derived from DMD more
          easily (see ticket #115).
        - Rebuild: Fixed configuration's "include" option (see ticket #116).
        - Rebuild: Fixed a crash bug with the highly-uncommon pragmas
          containing declarations (see ticket #117).
        - Added --config file for testing alternative dsss.conf's (see ticket
          #109).
        - Added --debug option (see ticket #108).
        - Added .dsssrc support (see ticket #120).

0.70 from 0.69:
        - Rebuild: Merged DMD 1.020.
        - Should now trim whitespace in "name" (and other) settings (see
          ticket #93).
        - Now uses 'svn export' instead of 'svn co' (see ticket #96).
        - Will now always remove temporary directories, even if the build
          failed (I decided this wasn't worth the difficulty it causes).

0.69 from 0.68:
        - Added --test option to test built libraries.
        - Rebuild: Fixed an intermittent segfault on Windows.
        - Added --doc-binaries option to generate documentation for binary
          builds.
        - Fixed DSSS_Light build.

0.68 from 0.67:
        - Rebuild: -of<name> now converts / to \ on Windows (see ticket #85).
        - `dsss uninstall` now removes (empty) directories as well as files